View Issue Details

IDProjectCategoryView StatusLast Update
0026837Open CASCADEOCCT:Modeling Algorithmspublic2016-04-20 15:50
ReporteremvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.9.1 
Target Version7.0.0Fixed in Version7.0.0 
Summary0026837: SameParameter algorithm throws an exception
DescriptionSameParameter algorithm applied to attached edge throws an exception.
Steps To Reproducerestore e.brep
sameparameter e
An exception was caught 00BA9EE0 : Standard_ConstructionError: Geom_TrimmedCurve::parameters out of range
** Exception ** 00BA9EE0 : Standard_ConstructionError: Geom_TrimmedCurve::parameters out of range
TagsNo tags attached.
Test case numberbugs moddata_3 bug26837

Attached Files

  • e.brep (11,444 bytes)

Relationships

parent of 0027029 closedabv Open CASCADE Possible regression in test de iges_1 L6 because of fix for issue 26837 

Activities

emv

2015-11-03 15:18

developer  

e.brep (11,444 bytes)

git

2015-11-17 10:56

administrator   ~0048269

Branch CR26837 has been created by ifv.

SHA-1: 82fe39e5af6a4f4c7e7edb9c1cd059767ffa5b51


Detailed log of new commits:

Author: ifv
Date: Tue Nov 17 10:53:51 2015 +0300

    0026837: SameParameter algorithm throws an exception

ifv

2015-11-17 11:01

developer   ~0048271

Branch CR26837 is reday for review

msv

2015-11-17 12:03

developer   ~0048277

Reviewed.

abv

2015-12-18 14:44

manager   ~0049286

In I understood correctly, the fix should be considered as reviewed, right?

abv

2015-12-18 14:44

manager   ~0049287

Please test then

git

2015-12-18 15:14

administrator   ~0049293

Branch CR26837 has been updated forcibly by mkv.

SHA-1: ac95eb4f80f67f5013c1356738e1617f1df65f88

mkv

2015-12-22 13:27

tester   ~0049430

Dear BugMaster,
Branch CR26837 was rebased on current master of occt git-repository.
SHA-1: ac95eb4f80f67f5013c1356738e1617f1df65f88

mkv

2015-12-22 13:27

tester   ~0049431

Dear BugMaster,
Branch CR26837 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: ac95eb4f80f67f5013c1356738e1617f1df65f88

Number of compiler warnings:

occt component :
Linux: 0 (0 on master)
Windows: 0 (0 on master)
MacOS : 134 (134 on master)

products component :
Linux: 37 (37 on master)
Windows: 0 (0 on master)

Regressions/Differences/Improvements:
Failed:
http://occt-tests/CR26837-master-occt-64/Debian70-64/de/iges_1/L6.html
http://occt-tests/CR26837-master-occt-64/Windows-64-VC10/de/iges_1/L6.html
  de iges_1 L6
http://occt-tests/CR26837-master-occt-64/Debian70-64/de/iges_1/P2.html
http://occt-tests/CR26837-master-occt-64/Windows-64-VC10/de/iges_1/P2.html
  de iges_1 P2

Testing cases:
http://occt-tests/CR26837-master-occt-64/Debian70-64/bugs/moddata_3/bug26837.html
http://occt-tests/CR26837-master-occt-64/Windows-64-VC10/bugs/moddata_3/bug26837.html
bugs moddata_3 bug26837: OK

Testing on Linux:
occt component :
Total MEMORY difference: 89639950 / 89585097 [+0.06%]
Total CPU difference: 19177.599999999995 / 19088.409999999876 [+0.47%]
products component :
Total MEMORY difference: 25173588 / 25042113 [+0.53%]
Total CPU difference: 7519.830000000003 / 7612.670000000021 [-1.22%]

Testing on Windows:
occt component :
Total MEMORY difference: 54575049 / 54588349 [-0.02%]
Total CPU difference: 17424.235293098805 / 18187.17378369882 [-4.19%]
products component :
Total MEMORY difference: 15881176 / 15894239 [-0.08%]
Total CPU difference: 5691.790085599969 / 5858.695555499994 [-2.85%]

There are no differences in images found by testdiff.

git

2015-12-22 13:28

administrator   ~0049432

Branch CR26837 has been updated by mkv.

SHA-1: a959bda42221eed5f235238d853a0ab61973e4af


Detailed log of new commits:

Author: mkv
Date: Tue Dec 22 13:28:22 2015 +0300

    Test case for issue CR26837

mkv

2015-12-22 13:29

tester   ~0049433

Dear ifv,
could you please review following test case
bugs moddata_3 bug26837

mkv

2015-12-22 13:29

tester   ~0049434

Dear ifv,
Branch CR26837 has been rejected due to:
- regressions/differences/improvements

ifv

2015-12-22 17:01

developer   ~0049471

For regression de iges_1 P2 it is necessary to change reference data according to current bechaviour of algoritm.

For de iges_1 L6 it is necessary to add in test TODO directive:
TODO CR27029 ALL: Error : 1 differences with reference data found

git

2015-12-22 17:56

administrator   ~0049473

Branch CR26837 has been updated by mkv.

SHA-1: a5d69bc1918a9b59b7fe36f33843ec83459d6348


Detailed log of new commits:

Author: mkv
Date: Tue Dec 22 17:55:54 2015 +0300

    Correction of test cases for issue CR26837

mkv

2015-12-22 17:57

tester   ~0049474

Dear BugMaster,
Branch CR26837 is TESTED.

git

2016-04-17 13:46

administrator   ~0052948

Branch CR26837 has been deleted by kgv.

SHA-1: a5d69bc1918a9b59b7fe36f33843ec83459d6348

Related Changesets

occt: master 54f91e03

2015-11-17 07:53:51

ifv


Committer: bugmaster Details Diff
0026837: SameParameter algorithm throws an exception

Test case for issue CR26837
Affected Issues
0026837
mod - src/GeomLib/GeomLib.cxx Diff File
add - tests/bugs/moddata_3/bug26837 Diff File

occt: master 86e81071

2015-12-22 14:55:54

mkv


Committer: bugmaster Details Diff
0026837: SameParameter algorithm throws an exception
Correction of test cases for issue CR26837
Affected Issues
0026837
mod - tests/de/iges_1/L6 Diff File

Issue History

Date Modified Username Field Change
2015-11-03 15:18 emv New Issue
2015-11-03 15:18 emv Assigned To => msv
2015-11-03 15:18 emv File Added: e.brep
2015-11-16 16:40 abv Target Version => 7.0.0
2015-11-16 17:23 msv Assigned To msv => ifv
2015-11-16 17:23 msv Status new => assigned
2015-11-17 10:56 git Note Added: 0048269
2015-11-17 11:01 ifv Note Added: 0048271
2015-11-17 11:01 ifv Assigned To ifv => msv
2015-11-17 11:01 ifv Status assigned => resolved
2015-11-17 12:03 msv Note Added: 0048277
2015-11-17 12:03 msv Status resolved => assigned
2015-12-18 14:44 abv Note Added: 0049286
2015-12-18 14:44 abv Status assigned => resolved
2015-12-18 14:44 abv Note Added: 0049287
2015-12-18 14:44 abv Assigned To msv => bugmaster
2015-12-18 14:44 abv Status resolved => reviewed
2015-12-18 14:57 mkv Assigned To bugmaster => mkv
2015-12-18 15:14 git Note Added: 0049293
2015-12-22 13:27 mkv Note Added: 0049430
2015-12-22 13:27 mkv Note Added: 0049431
2015-12-22 13:28 git Note Added: 0049432
2015-12-22 13:29 mkv Note Added: 0049433
2015-12-22 13:29 mkv Note Added: 0049434
2015-12-22 13:29 mkv Assigned To mkv => ifv
2015-12-22 13:29 mkv Status reviewed => feedback
2015-12-22 13:29 mkv Test case number => bugs moddata_3 bug26837
2015-12-22 17:01 ifv Note Added: 0049471
2015-12-22 17:01 ifv Assigned To ifv => mkv
2015-12-22 17:01 ifv Status feedback => resolved
2015-12-22 17:56 git Note Added: 0049473
2015-12-22 17:57 mkv Note Added: 0049474
2015-12-22 17:57 mkv Assigned To mkv => bugmaster
2015-12-22 17:57 mkv Status resolved => reviewed
2015-12-22 17:58 mkv Status reviewed => tested
2015-12-22 19:38 msv Relationship added parent of 0027029
2015-12-25 19:04 bugmaster Changeset attached => occt master 86e81071
2015-12-25 19:04 bugmaster Changeset attached => occt master 54f91e03
2015-12-25 19:04 bugmaster Status tested => verified
2015-12-25 19:04 bugmaster Resolution open => fixed
2016-04-17 13:46 git Note Added: 0052948
2016-04-20 15:43 aiv Fixed in Version => 7.0.0
2016-04-20 15:50 aiv Status verified => closed