0026837: SameParameter algorithm throws an exception

Test case for issue CR26837